# uavros

./: .gitignore  rviz_mesh_publisher.cpp  stack.xml
costmap_3d/: mainpage.dox  manifest.xml
robot_state_publisher/: CMakeLists.txt  package.xml
robot_state_publisher/include/robot_state_publisher/: robot_state_publisher.h
robot_state_publisher/src/: joint_state_listener.cpp  robot_state_publisher.cpp
uav_camera/: CMakeLists.txt  Makefile  README  mainpage.dox  manifest.xml  package.xml.broken  stack.xml
uav_camera/camera/: CMakeLists.txt
uav_camera/camera/include/camera/: .video_publisher.h.swo  video_publisher.h
uav_camera/camera/msg_gen/lisp/: _package.lisp  _package_camera_msg.lisp  camera-msg.asd  camera_msg.lisp
uav_camera/camera/src/: video_publisher.cpp
uav_camera/camera/src/camera/msg/: _camera_msg.py
uav_camera/cfg/: threshold.cfg
uav_camera/data/: multi_pattern
uav_camera/include/uav_camera/: video_publisher.h
uav_camera/msg_gen/cpp/include/camera/: camera_msg.h
uav_camera/platform/: CMakeLists.txt  mainpage.dox  manifest.xml
uav_camera/platform/launch/: demo.launch
uav_camera/platform/msg_gen/lisp/: _package.lisp
uav_camera/platform/platform/: CMakeLists.txt  manifest.xml
uav_camera/platform/platform/include/platform/: platform_controller.h
uav_camera/platform/platform/launch/: demo.launch
uav_camera/platform/platform/msg_gen/cpp/include/platform/: mode_msg.h
uav_camera/platform/platform/msg_gen/lisp/: _package_mode_msg.lisp
uav_camera/platform/src/: set_track_mode.cpp
uav_camera/src/: .video_publisher.cpp.swo  video_publisher.cpp
uav_collision_checking/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
uav_collision_checking/config/: hexarotor.yaml
uav_collision_checking/include/uav_collision_checking/: occupancy_grid.h  uav_collision_space.h
uav_collision_checking/src/: occupancy_grid.cpp  uav_collision_space.cpp
uav_debug/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
uav_debug/include/uav_debug/: uav_debug.h
uav_debug/src/: uav_debug.cpp
uav_global_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
uav_goal_interpolate/: CMakeLists.txt  manifest.xml  package.xml
uav_goal_interpolate/src/: uav_goal_interpolate.cpp  uav_goal_interpolate.h
uav_launch/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
uav_launch/config/: UAV.yaml  hector_slam.yaml  hexadriver.yaml  motor_coef.yaml  uav_goal_interpolate.yaml  uav_local_planner.yaml  uav_local_planner_sim.yaml  uav_set_goal.yaml  uav_state_publisher.yaml
uav_launch/launch/: test_cam.launch  test_localization_on_bag.launch  uav.launch  uav_controls.launch  uav_devices.launch  uav_interface.launch  uav_launch.launch  uav_logging.launch  uav_navigation.launch  uav_state_estimation.launch
uav_local_planner/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
uav_local_planner/cfg/: UAVController.cfg  uav_local_planner.cfg  uav_local_planner.cfgc
uav_local_planner/cfg/cpp/uav_local_planner/: TutorialsConfig.h
uav_local_planner/config/: .motor_coef.txt.swp  motor_coef.txt  motor_coef.yaml
uav_local_planner/docs/: TutorialsConfig-usage.dox  TutorialsConfig.dox  TutorialsConfig.wikidoc
uav_local_planner/include/uav_local_planner/: .controller.h.swp  .hexa_dynamics.h.swp  controller.h  hexa_dynamics.h  local_planner.h  twist_local_planner.h
uav_local_planner/launch/: uav_local_planner.launch
uav_local_planner/src/: .controller.cpp.swp  .test_controller.cpp.swp  controller.cpp  local_planner.cpp  test_controller.cpp  twist_local_planner.cpp
uav_local_planner/src/uav_local_planner/cfg/: TutorialsConfig.py  UAVControllerConfig.py
uav_msgs/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  package.xml
uav_msgs/msg/: BehaviorPath.msg  ControllerCommand.msg  FlightModeRequest.msg  FlightModeStatus.msg  PoseAction.msg  camera_msg.msg  mode_msg.msg
uav_msgs/msg_gen/cpp/include/uav_msgs/: ControllerCommand.h  FlightModeRequest.h  FlightModeStatus.h  camera_msg.h  mode_msg.h
uav_msgs/msg_gen/lisp/: ControllerCommand.lisp  FlightModeRequest.lisp  FlightModeStatus.lisp  _package.lisp  _package_ControllerCommand.lisp  _package_FlightModeRequest.lisp  _package_camera_msg.lisp  _package_mode_msg.lisp  camera_msg.lisp  mode_msg.lisp  uav_msgs-msg.asd
uav_msgs/src/uav_msgs/msg/: _ControllerCommand.py  _FlightModeRequest.py  _FlightModeStatus.py  __init__.py  _camera_msg.py  _mode_msg.py
uav_platform/: CMakeLists.txt  Makefile  manifest.xml  package.xml
uav_platform/include/platform/: platform_controller.h
uav_platform/include/uav_platform/: nav_markers.h  platform_controller.h  pose_filter.h
uav_platform/launch/: uav_camera_landing.launch
uav_platform/msg_gen/cpp/include/platform/: mode_msg.h
uav_platform/msg_gen/lisp/: mode_msg.lisp  platform-msg.asd
uav_platform/src/: align_mode.cpp  nav_markers.cpp  platform_controller.cpp  pose_filter.cpp  set_track_mode.cpp
uav_platform/src/platform/msg/: __init__.py  _mode_msg.py
uav_safety_interface/: CMakeLists.txt  manifest.xml  package.xml
uav_safety_interface/include/: SafetyInterface.h
uav_safety_interface/src/: SafetyInterface.cpp  TestController.cpp
uav_servo_node/: CMakeLists.txt  manifest.xml  package.xml  test_servo.launch
uav_servo_node/include/uav_servo_node/: servo_node.h
uav_servo_node/src/: Dynamixel.cpp  ErrorMessage.cpp  SerialDevice.cpp  servo_node.cpp
uav_set_goal/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
uav_set_goal/src/: .uav_set_goal.cpp.swp  uav_set_goal.cpp  uav_set_goal.h
uav_state_publisher/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
uav_state_publisher/include/uav_state_publisher/: uav_state_publisher.h  uav_state_publisher_new.h
uav_state_publisher/src/: uav_state_publisher.cpp  uav_state_publisher_new.cpp
uavros/: CMakeLists.txt  package.xml
