<package format="2">
    <name>robot_state_publisher</name>
    <version>0.0.0</version>
    <description>
        This package allows you to publish the state of a robot to 
        <a href="http://ros.org/wiki/tf">tf</a>. Once the state gets published, it is
        available to all components in the system that also use <tt>tf</tt>.
        The package takes the joint angles of the robot as input
        and publishes the 3D poses of the robot links, using a kinematic
        tree model of the robot. The package can both be used as a library
        and as a ROS node.  This package has been well tested and the code
        is stable. No major changes are planned in the near future
    </description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Wim Meeussen meeussen@willowgarage.com </author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>boost</depend>
    <depend>kdl_parser</depend>
    <depend>orocos_kdl</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>
    <depend>tf_conversions</depend>
</package>
