<package format="2">
    <name>uav_collision_checking</name>
    <version>0.0.0</version>
    <description>uav_collision_checking</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Michael Phillips</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <!-- <depend>kdl</depend> -->
    <!-- <depend>distance_field</depend> -->
</package>
