<package format="2">
    <name>uav_debug</name>
    <version>0.0.0</version>
    <description>uav_debug</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Brian MacAllister</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
  
    <depend>geometry_msgs</depend>
    <depend>libpcl-all-dev</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>
</package>
