<package format="2">
    <name>uav_local_planner</name>
    <version>0.0.0</version>
    <description>uav_local_planner</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Michael Phillips</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>cmake_modules</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>eigen_conversions</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>uav_msgs</depend>
</package>
