<package format="2">
    <name>uav_msgs</name>
    <version>0.0.0</version>
    <description>uav_msgs</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Venkatraman</author>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>

    <build_depend>message_generation</build_depend>
    
    <exec_depend>message_runtime</exec_depend>
</package>
