<package format="2">
    <name>uav_safety_interface</name>
    <version>0.0.0</version>
    <description>uav_safety_interface</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Kalin Gochev</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>laser_geometry</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>
    <depend>uav_msgs</depend>
    <depend>visualization_msgs</depend>
</package>
