<package format="2">
    <name>uav_state_publisher</name>
    <version>0.0.0</version>
    <description>uav_state_publisher</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Michael Phillips</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>libpcl-all-dev</depend>
    <depend>pcl_conversions</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>
    <depend>uav_msgs</depend>
</package>
